Rename data file in Section 9.2

--- a/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
+++ b/9-2-load-balancing-with-multiple-dispatchers/plot.ipynb
@@ -28,8 +28,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.839372Z",
-     "start_time": "2019-08-23T16:10:09.170981Z"
+     "end_time": "2019-09-12T11:31:19.914394Z",
+     "start_time": "2019-09-12T11:31:19.308126Z"
     }
    },
    "outputs": [
@@ -51,8 +51,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.844416Z",
-     "start_time": "2019-08-23T16:10:09.841349Z"
+     "end_time": "2019-09-12T11:31:19.920652Z",
+     "start_time": "2019-09-12T11:31:19.916930Z"
     },
     "hide_input": false
    },
@@ -71,8 +71,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.893127Z",
-     "start_time": "2019-08-23T16:10:09.847770Z"
+     "end_time": "2019-09-12T11:31:19.961159Z",
+     "start_time": "2019-09-12T11:31:19.923128Z"
     }
    },
    "outputs": [],
@@ -86,8 +86,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.905793Z",
-     "start_time": "2019-08-23T16:10:09.897094Z"
+     "end_time": "2019-09-12T11:31:19.968860Z",
+     "start_time": "2019-09-12T11:31:19.963553Z"
     }
    },
    "outputs": [],
@@ -131,8 +131,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.926516Z",
-     "start_time": "2019-08-23T16:10:09.911234Z"
+     "end_time": "2019-09-12T11:31:19.983523Z",
+     "start_time": "2019-09-12T11:31:19.971754Z"
     },
     "code_folding": []
    },
@@ -293,8 +293,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.949390Z",
-     "start_time": "2019-08-23T16:10:09.929582Z"
+     "end_time": "2019-09-12T11:31:20.005885Z",
+     "start_time": "2019-09-12T11:31:19.986627Z"
     },
     "code_folding": []
    },
@@ -339,8 +339,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.960716Z",
-     "start_time": "2019-08-23T16:10:09.952131Z"
+     "end_time": "2019-09-12T11:31:20.032708Z",
+     "start_time": "2019-09-12T11:31:20.015891Z"
     }
    },
    "outputs": [],
@@ -456,8 +456,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.984906Z",
-     "start_time": "2019-08-23T16:10:09.964857Z"
+     "end_time": "2019-09-12T11:31:20.069336Z",
+     "start_time": "2019-09-12T11:31:20.039237Z"
     },
     "code_folding": []
    },
@@ -507,8 +507,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:09.996531Z",
-     "start_time": "2019-08-23T16:10:09.988242Z"
+     "end_time": "2019-09-12T11:31:20.100491Z",
+     "start_time": "2019-09-12T11:31:20.078167Z"
     }
    },
    "outputs": [],
@@ -540,8 +540,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:10:10.005862Z",
-     "start_time": "2019-08-23T16:10:09.999549Z"
+     "end_time": "2019-09-12T11:31:20.111533Z",
+     "start_time": "2019-09-12T11:31:20.104439Z"
     }
    },
    "outputs": [],
@@ -556,8 +556,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:11:00.477607Z",
-     "start_time": "2019-08-23T16:10:10.008871Z"
+     "end_time": "2019-09-12T11:31:59.363739Z",
+     "start_time": "2019-09-12T11:31:20.114828Z"
     }
    },
    "outputs": [],
@@ -571,8 +571,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:11:00.793575Z",
-     "start_time": "2019-08-23T16:11:00.480019Z"
+     "end_time": "2019-09-12T11:31:59.614667Z",
+     "start_time": "2019-09-12T11:31:59.365404Z"
     }
    },
    "outputs": [
@@ -595,16 +595,6 @@
     "    plot(ρρ, dynamic[i], color = 'C'+str(i), label = \"Dynamic - ℓ = %d\" % l)\n",
     "    plot(ρρ, static[i], '--', label = \"Static - ℓ = %d\" % l)\n",
     "\n",
-    "#for i,l in enumerate(ll):\n",
-    "#    ρρρ, exp_blocking \\\n",
-    "#    = loadtxt('data/dispatchers' + str(l) + '-balanced-blocking', delimiter='\\t', unpack=True)\n",
-    "#    plot(ρρρ, exp_blocking, color = 'C' + str(i), linestyle=\"None\", marker=\"x\", label=\"Static - ℓ = \" + str(l))\n",
-    "\n",
-    "#for i,l in enumerate(ll):\n",
-    "#    ρρρ, exp_blocking \\\n",
-    "#    = loadtxt('data/baf' + str(l) + '-balanced-blocking', delimiter='\\t', unpack=True)\n",
-    "#    plot(ρρρ, exp_blocking, color = 'C' + str(i), linestyle=\"None\", marker=\"+\", label=\"Dynamic - ℓ = \" + str(l))\n",
-    "\n",
     "xlim(0,4); ylim(0,1)\n",
     "legend(loc=4); title(\"Two dispatchers\")\n",
     "xlabel(\"Load ρ\"); ylabel(\"Probability\")\n",
@@ -623,8 +613,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:11:00.799570Z",
-     "start_time": "2019-08-23T16:11:00.795816Z"
+     "end_time": "2019-09-12T11:31:59.618860Z",
+     "start_time": "2019-09-12T11:31:59.616247Z"
     }
    },
    "outputs": [],
@@ -639,8 +629,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:14.875831Z",
-     "start_time": "2019-08-23T16:11:00.802438Z"
+     "end_time": "2019-09-12T11:32:58.092257Z",
+     "start_time": "2019-09-12T11:31:59.621024Z"
     }
    },
    "outputs": [],
@@ -655,8 +645,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:15.232122Z",
-     "start_time": "2019-08-23T16:12:14.877527Z"
+     "end_time": "2019-09-12T11:32:58.402299Z",
+     "start_time": "2019-09-12T11:32:58.093934Z"
     }
    },
    "outputs": [
@@ -680,17 +670,7 @@
     "    plot(ρρ, best_static[i], '--', label = \"Best static - ℓ = %d\" % l)\n",
     "    plot(ρρ, uniform_static[i], '.', label = \"Uniform static - ℓ = %d\" % l)\n",
     "\n",
-    "#for i,l in enumerate(ll):\n",
-    "#    ρρρ, exp_blocking \\\n",
-    "#    = loadtxt('data/dispatchers' + str(l) + '-imbalanced-blocking', delimiter='\\t', unpack=True)\n",
-    "#    plot(ρρρ, exp_blocking, color = 'C' + str(i), linestyle=\"None\", marker=\"x\", label=\"Static - ℓ = \" + str(l))\n",
-    "\n",
-    "#for i,l in enumerate(ll):\n",
-    "#    ρρρ, exp_blocking \\\n",
-    "#    = loadtxt('data/baf' + str(l) + '-imbalanced-blocking', delimiter='\\t', unpack=True)\n",
-    "#    plot(ρρρ, exp_blocking, color = 'C' + str(i), linestyle=\"None\", marker=\"+\", label=\"Dynamic - ℓ = \" + str(l))\n",
-    "\n",
-    "xlim(0,4); ylim(0,1)\n",
+    "xlim(0, 4); ylim(0, 1)\n",
     "legend(loc=6, bbox_to_anchor=(1.1, .5)); title(\"Two dispatchers\")\n",
     "xlabel(\"Load ρ\"); ylabel(\"Probability\")\n",
     "show()"
@@ -708,8 +688,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:15.238646Z",
-     "start_time": "2019-08-23T16:12:15.234990Z"
+     "end_time": "2019-09-12T11:32:58.407288Z",
+     "start_time": "2019-09-12T11:32:58.404323Z"
     }
    },
    "outputs": [],
@@ -724,8 +704,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:52.100372Z",
-     "start_time": "2019-08-23T16:12:15.241748Z"
+     "end_time": "2019-09-12T11:33:29.095375Z",
+     "start_time": "2019-09-12T11:32:58.409445Z"
     }
    },
    "outputs": [],
@@ -739,8 +719,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:52.378171Z",
-     "start_time": "2019-08-23T16:12:52.102173Z"
+     "end_time": "2019-09-12T11:33:29.367179Z",
+     "start_time": "2019-09-12T11:33:29.097145Z"
     }
    },
    "outputs": [
@@ -764,14 +744,6 @@
     "plot(ρρ, static, '--', color = 'C1', label = \"Best static (= Uniform static)\")\n",
     "plot(ρρ, ρρ * [1. - β for β in static], color = 'C1')\n",
     "\n",
-    "#ρρρ, exp_blocking \\\n",
-    "#= loadtxt('data/dispatchers' + str(l) + '-homo-dynamic-blocking', delimiter='\\t', unpack=True)\n",
-    "#plot(ρρρ, exp_blocking, color = 'C0', linestyle=\"None\", marker=\"+\", label=\"Dynamic\")\n",
-    "\n",
-    "#ρρρ, exp_blocking \\\n",
-    "#= loadtxt('data/dispatchers' + str(l) + '-homo-static-blocking', delimiter='\\t', unpack=True)\n",
-    "#plot(ρρρ, exp_blocking, color = 'C1', linestyle=\"None\", marker=\"x\", label=\"Best static\")\n",
-    "\n",
     "xlim(0,2); ylim(0,1)\n",
     "legend(loc='best'); title(\"Two dispatchers\")\n",
     "xlabel(\"Load ρ\"); ylabel(\"Probability\")\n",
@@ -790,8 +762,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:12:52.384254Z",
-     "start_time": "2019-08-23T16:12:52.380524Z"
+     "end_time": "2019-09-12T11:33:29.376751Z",
+     "start_time": "2019-09-12T11:33:29.372797Z"
     }
    },
    "outputs": [],
@@ -806,8 +778,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:13:49.184748Z",
-     "start_time": "2019-08-23T16:12:52.392254Z"
+     "end_time": "2019-09-12T11:34:14.766366Z",
+     "start_time": "2019-09-12T11:33:29.379917Z"
     }
    },
    "outputs": [],
@@ -822,8 +794,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:13:49.437515Z",
-     "start_time": "2019-08-23T16:13:49.186640Z"
+     "end_time": "2019-09-12T11:34:15.020189Z",
+     "start_time": "2019-09-12T11:34:14.767963Z"
     }
    },
    "outputs": [
@@ -849,19 +821,7 @@
     "plot(ρρ, uniform_static, '-.', color = 'C2', label = 'Uniform static')\n",
     "plot(ρρ, ρρ * [1. - β for β in uniform_static], color = 'C2')\n",
     "\n",
-    "#ρρρ, exp_blocking \\\n",
-    "#= loadtxt('data/dispatchers' + str(l) + '-hete-dynamic-blocking', delimiter='\\t', unpack=True)\n",
-    "#plot(ρρρ, exp_blocking, color = 'C0', linestyle=\"None\", marker=\"x\", label=\"Dynamic\")\n",
-    "\n",
-    "#ρρρ, exp_blocking \\\n",
-    "#= loadtxt('data/dispatchers' + str(l) + '-hete-best_static-blocking', delimiter='\\t', unpack=True)\n",
-    "#plot(ρρρ, exp_blocking, color = 'C1', linestyle=\"None\", marker=\"+\", label=\"Best static\")\n",
-    "\n",
-    "#ρρρ, exp_blocking \\\n",
-    "#= loadtxt('data/dispatchers' + str(l) + '-hete-uniform_static-blocking', delimiter='\\t', unpack=True)\n",
-    "#plot(ρρρ, exp_blocking, color = 'C2', linestyle=\"None\", marker=\"x\", label=\"uniform_static static\")\n",
-    "\n",
-    "xlim(0,4); ylim(0,1)\n",
+    "xlim(0, 4); ylim(0, 1)\n",
     "legend(loc=4); title(\"Two dispatchers\")\n",
     "xlabel(\"Load ρ\"); ylabel(\"Probability\")\n",
     "show()"
@@ -872,8 +832,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T16:13:49.450794Z",
-     "start_time": "2019-08-23T16:13:49.439391Z"
+     "end_time": "2019-09-12T11:34:15.035169Z",
+     "start_time": "2019-09-12T11:34:15.022915Z"
     }
    },
    "outputs": [],
@@ -888,8 +848,8 @@
     "                    'uo': ρρ * [1. - β for β in uniform_static]\n",
     "                    })\n",
     "\n",
-    "fn = \"data/theo-jiq-comp.csv\"\n",
-    "df.to_csv(fn, index = False)"
+    "fn = \"data/multiple-dispatchers.csv\"\n",
+    "df.to_csv(fn, index=False)"
    ]
   }
  ],
