Make minor correction in chapter 6

--- a/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
+++ b/6-performance-analysis-by-server-elimination/compute_and_plot.ipynb
@@ -217,28 +217,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2. Local assignment (Section 6.3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Random customer assignment (Subsection 6.3.3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "With $ \\displaystyle \\rho_{|s} = \\frac{1-\\frac{r-1}{s}}{1-\\frac{r-1}{S}}\\rho$, the probability that the system is empty is $\\psi = \\psi_{|1..S}$ , where\n",
     "$$\n",
@@ -256,8 +249,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-16T13:06:35.169748Z",
      "start_time": "2019-09-16T13:06:35.163587Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -271,9 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "For each $t \\in 1..S-r+1$, the expected number of class-$t$ customers in the queue is $L_{t} = L_{t|1..S}$, where\n",
     "\\begin{equation}\n",
@@ -297,8 +287,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-16T13:06:35.181476Z",
      "start_time": "2019-09-16T13:06:35.171699Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -317,11 +306,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "The total mean number of jobs in the system is $L = L_{|1..S}$, where\n",
+    "The expected number of customers in the queue is $L = L_{|1..S}$, where\n",
     "\\begin{equation}\n",
     "L_{|1..s} = \\frac{ \\displaystyle\n",
     "\t\t\\rho_{|s}+\\frac{\\psi_{|1..s}}{s}\\sum_{t=1}^{s}\\frac{L_{|1..t-1}+L_{|1..s-t}}{\\psi_{|1..t-1}\\psi_{|1..s-t}}\n",
@@ -341,8 +328,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-16T13:06:35.196099Z",
      "start_time": "2019-09-16T13:06:35.183528Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -358,19 +344,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Ring queue (Subsection 6.3.4)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "We use the fact that removing a server from a ring queue gives a line queue.\n",
     "Specifically, after simplifications, we obtain that the expected number of customers in the ring queue is given by\n",
@@ -387,8 +368,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-16T13:06:35.211744Z",
      "start_time": "2019-09-16T13:06:35.199599Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
