Make minor corrections in Chapter 8

--- a/8-load-balancing/dynamic-onetype-exact.ipynb
+++ b/8-load-balancing/dynamic-onetype-exact.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook computes numerical results for Chapter 8 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the overall performance of the dynamic load balancing when there is a single job type. The obtained results are used for the paragraph \"Number of tokens\" in Section 8.3.1."
+    "This Notebook computes numerical results of Chapter 8 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the overall performance of the dynamic load balancing when there is a single job type. The obtained results are used for the paragraph \"Number of tokens\" in Section 8.3.1."
    ]
   },
   {
@@ -28,8 +28,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:12.948946Z",
-     "start_time": "2019-09-12T09:26:12.400756Z"
+     "end_time": "2019-09-16T14:06:42.914383Z",
+     "start_time": "2019-09-16T14:06:42.553855Z"
     }
    },
    "outputs": [
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:12.958495Z",
-     "start_time": "2019-09-12T09:26:12.952216Z"
+     "end_time": "2019-09-16T14:06:42.918869Z",
+     "start_time": "2019-09-16T14:06:42.916198Z"
     }
    },
    "outputs": [],
@@ -69,8 +69,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.150714Z",
-     "start_time": "2019-09-12T09:26:12.961495Z"
+     "end_time": "2019-09-16T14:06:43.166956Z",
+     "start_time": "2019-09-16T14:06:42.920708Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.156026Z",
-     "start_time": "2019-09-12T09:26:13.152410Z"
+     "end_time": "2019-09-16T14:06:43.174066Z",
+     "start_time": "2019-09-16T14:06:43.169487Z"
     }
    },
    "outputs": [],
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following aggregate formulas allow us to compute global performance metrics like the average blocking probability and the mean delay. We cannot use them to derive more detailed metrics like the probability that each server is idle or the mean number of jobs at each server. For this, we use the results obtained with the (slower) program ``exact-bipartite.c`` called by ``script.sh``."
+    "The following aggregate formulas allow us to compute global performance metrics such as the average blocking probability and the mean delay. We cannot use them to derive more detailed metrics like the probability that each server is idle or the mean number of jobs at each server. For this, we use the results obtained with the (slower) C program ``sources/dynamic-exact.c`` called by ``computer.sh``."
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "source": [
     "**Stationary measure.**\n",
-    "We focus on the aggregate state $y = (y_1,\\ldots,y_N)$ of the queue of available tokens.\n",
+    "We focus on the macrostate $y = (y_1,\\ldots,y_N)$ of the queue of available tokens.\n",
     "Any stationary measure $\\pi_N$ of this aggregate state is of the form\n",
     "$$\n",
     "\\pi_N(y) = \\frac1G \\Lambda(y) \\prod_{i=1}^N \\left( \\frac1{\\mu_i} \\right)^{\\ell_i - y_i},\n",
@@ -134,6 +134,8 @@
     "\\Lambda(y) = \\frac1\\nu \\sum_{i: y_i > 0} \\Lambda(y-e_i),\n",
     "\\quad \\forall y \\le \\ell: y \\neq 0.\n",
     "$$\n",
+    "Here, we use the fact that there is a single job type (compatible with all computers),\n",
+    "so that the overall arrival rate is $\\nu$ whenever a token is available.\n",
     "We focus on the stationary measure $\\pi_N$ such that $\\pi_N(0) = 1$, that is\n",
     "$$\n",
     "\\pi_N(y) = \\Lambda(y) \\prod_{i=1}^N {\\mu_i}^{y_i},\n",
@@ -158,13 +160,14 @@
    "metadata": {},
    "source": [
     "**State aggregation.**\n",
-    "The size of the state space of $y$ is exponential with the number of servers,\n",
-    "hence the previous formula can only be applied to small server pools.\n",
-    "We consider a second aggregate state that lives in a much smaller space.\n",
+    "The size of the state space of $y$ is exponential in the number of computers,\n",
+    "hence the previous formula can only be applied to small computer clusters.\n",
+    "We consider an aggregate state that lives in a much smaller space.\n",
     "Specifically, we focus on the total number $t$ of available tokens, regardless of their class,\n",
-    "that is, $t = y_1 + \\ldots + y_N$. Knowing the distribution of this second aggregate state is sufficient to compute performance metrics such as the average blocking probability or the mean number of jobs in the system.\n",
+    "that is, $t = y_1 + \\ldots + y_N$.\n",
+    "Knowing the distribution of this aggregate state is sufficient to compute performance metrics such as the average loss probability or the expected number of jobs in the cluster.\n",
     "\n",
-    "With a slight abuse of notation, the stationary distribution of this new aggregate state is defined by\n",
+    "With a slight abuse of notation, the stationary measure of this aggregate state is defined by\n",
     "$$\n",
     "\\pi_N(t) = \\sum_{\\substack{y \\le \\ell: \\\\ y_1 + \\ldots + y_N = t}} \\pi_N(y),\n",
     "\\quad \\forall t = 0,1,\\ldots,\\ell_1 + \\ldots + \\ell_N.\n",
@@ -194,7 +197,8 @@
     "\\prod_{i=1}^N \\left( \\frac{\\mu_i}\\nu \\right)^{y_i}.\n",
     "\\end{align*}\n",
     "We recognize the stationary measure $\\pi_{N-1}$\n",
-    "of a server pool reduced to the first $N-1$ servers (with $\\pi_{N-1}(0) = 1$).\n",
+    "of the aggregate state of a computer cluster\n",
+    "reduced to the first $N-1$ computers (with $\\pi_{N-1}(0) = 1$).\n",
     "In the end, we obtain\n",
     "\\begin{align*}\n",
     "\\pi_N(t)\n",
@@ -212,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Computation in practice.**\n",
+    "**Implementation.**\n",
     "The last equality gives us an effective way of computing the stationary measure $\\pi_N$\n",
     "by progressively building $\\pi_0$, $\\pi_1$, $\\ldots$, $\\pi_{N-1}$, $\\pi_N$,\n",
     "where $\\pi_0$ is defined on $\\{0\\}$ by $\\pi_0(0) = 1$.\n",
@@ -246,8 +250,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.170539Z",
-     "start_time": "2019-09-12T09:26:13.157966Z"
+     "end_time": "2019-09-16T14:06:43.191379Z",
+     "start_time": "2019-09-16T14:06:43.176579Z"
     }
    },
    "outputs": [],
@@ -297,8 +301,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.184445Z",
-     "start_time": "2019-09-12T09:26:13.173061Z"
+     "end_time": "2019-09-16T14:06:43.201379Z",
+     "start_time": "2019-09-16T14:06:43.193666Z"
     }
    },
    "outputs": [],
@@ -327,8 +331,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.194766Z",
-     "start_time": "2019-09-12T09:26:13.186935Z"
+     "end_time": "2019-09-16T14:06:43.208706Z",
+     "start_time": "2019-09-16T14:06:43.203563Z"
     }
    },
    "outputs": [],
@@ -350,8 +354,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:13.202711Z",
-     "start_time": "2019-09-12T09:26:13.198661Z"
+     "end_time": "2019-09-16T14:06:43.216005Z",
+     "start_time": "2019-09-16T14:06:43.212643Z"
     }
    },
    "outputs": [],
@@ -365,8 +369,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:23.968998Z",
-     "start_time": "2019-09-12T09:26:13.205529Z"
+     "end_time": "2019-09-16T14:06:54.522727Z",
+     "start_time": "2019-09-16T14:06:43.219350Z"
     }
    },
    "outputs": [],
@@ -387,8 +391,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:23.991797Z",
-     "start_time": "2019-09-12T09:26:23.971095Z"
+     "end_time": "2019-09-16T14:06:54.544218Z",
+     "start_time": "2019-09-16T14:06:54.524450Z"
     }
    },
    "outputs": [],
