--- a/8-load-balancing/static-exact.ipynb
+++ b/8-load-balancing/static-exact.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook computes numerical results for Chapter 8 of the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the performance of two static load-balancing policies, referred to as *best static* and *uniform static*. A static load-balancing policy assigns each incoming job to a computer chosen at random, independently of the current cluster state, according to pre-determined routing probabilities. For each $i = 1,\\ldots,I$, we let $p_i$ denote the probability that an incoming job is assigned to computer $i$. The exogeneous arrival rate is denoted by $\\nu$."
+    "This Notebook computes numerical results of Chapter 8 in the Ph.D. thesis *Resource management in computer clusters: algorithm design and performance analysis* by Céline Comte. Specifically, the following piece of code computes the performance of two static load-balancing policies, referred to as *best static* and *uniform static*. A static load-balancing policy assigns each incoming job to a computer chosen at random, independently of the current cluster state, according to pre-determined routing probabilities. For each $i = 1,\\ldots,I$, we let $p_i$ denote the probability that an incoming job is assigned to computer $i$. The exogeneous arrival rate is denoted by $\\nu$."
    ]
   },
   {
@@ -28,8 +28,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.308391Z",
-     "start_time": "2019-09-12T09:26:06.838780Z"
+     "end_time": "2019-09-16T14:15:22.791887Z",
+     "start_time": "2019-09-16T14:15:22.407150Z"
     }
    },
    "outputs": [
@@ -50,8 +50,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.321332Z",
-     "start_time": "2019-09-12T09:26:07.310902Z"
+     "end_time": "2019-09-16T14:15:22.796528Z",
+     "start_time": "2019-09-16T14:15:22.793775Z"
     }
    },
    "outputs": [],
@@ -69,8 +69,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.541047Z",
-     "start_time": "2019-09-12T09:26:07.323534Z"
+     "end_time": "2019-09-16T14:15:23.019758Z",
+     "start_time": "2019-09-16T14:15:22.798616Z"
     }
    },
    "outputs": [],
@@ -84,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.545791Z",
-     "start_time": "2019-09-12T09:26:07.542657Z"
+     "end_time": "2019-09-16T14:15:23.024908Z",
+     "start_time": "2019-09-16T14:15:23.021418Z"
     }
    },
    "outputs": [],
@@ -119,12 +119,12 @@
    },
    "source": [
     "**Independence.**\n",
-    "In steady state, the number of jobs at each computer is independent of the number of jobs at the other computers. Furthermore, for each $i = 1,\\ldots,I$, the number of available tokens of computer $i$ is equal to the number of customers in an M/M/1/$\\ell_i$ queue. Therefore, the stationary distribution of the Markov process defined by the macrostate $y = (y_1, \\ldots, y_I)$ that counts the number of available tokens of each computer is given by\n",
+    "In steady state, the number of jobs at each computer is independent of the number of jobs at the other computers. Furthermore, for each $i = 1,\\ldots,I$, the number of available tokens of computer $i$ is equal to the number of customers in an M/M/1/$\\ell_i$ queue with load $\\rho_i = \\mu_i / (\\nu p_i)$. Therefore, the stationary distribution of the Markov process defined by the macrostate $y = (y_1, \\ldots, y_I)$ that counts the number of available tokens of each computer is given by\n",
     "$$\n",
     "\\pi(y) = \\prod_{i=1}^I \\frac{ {\\rho_i}^{y_i} }{ 1 + \\rho_i + \\ldots + {\\rho_i}^{\\ell_i} },\n",
     "\\quad \\forall y \\le \\ell,\n",
     "$$\n",
-    "where $\\rho_1 = \\frac{\\mu_1}{\\nu p_1}, \\ldots, \\rho_N = \\frac{\\mu_N}{\\nu p_N}$ are the (state-independent) loads at the computers. Recall that we have\n",
+    "Recall that we have\n",
     "$$\n",
     "1 + \\rho_i + \\ldots + {\\rho_i}^{\\ell_i} = \n",
     "\\begin{cases}\n",
@@ -160,13 +160,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Mean number of jobs.**\n",
+    "**Expected number of jobs.**\n",
     "By linearity of the expectation, the expected number $L$ of jobs in the cluster is given by\n",
     "$$\n",
     "L = L_1 + \\ldots + L_I,\n",
     "$$\n",
     "where, for each $i = 1,\\ldots,I$,\n",
-    "$L_i$ is the mean number of jobs at computer $i$.\n",
+    "$L_i$ is the expected number of jobs at computer $i$.\n",
     "Since the computer states are independent, we have\n",
     "$$\n",
     "L_i = \\frac\n",
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute performance in an M/M/1/$\\ell$ queue subject to the load $\\rho$."
+    "The function ``mm1ℓ`` computes performance in an M/M/1/$\\ell$ queue subject to the load $\\rho$."
    ]
   },
   {
@@ -195,8 +195,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.556499Z",
-     "start_time": "2019-09-12T09:26:07.548266Z"
+     "end_time": "2019-09-16T14:15:23.041600Z",
+     "start_time": "2019-09-16T14:15:23.027680Z"
     }
    },
    "outputs": [],
@@ -216,7 +216,7 @@
     }
    },
    "source": [
-    "Compute performance under a given static load-balancing policy, defined by the routing probabilities given by the vector $p$."
+    "The function ``static`` computes performance under a given static load-balancing policy, defined by the routing probabilities given by the vector $p$."
    ]
   },
   {
@@ -224,8 +224,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.568400Z",
-     "start_time": "2019-09-12T09:26:07.559199Z"
+     "end_time": "2019-09-16T14:15:23.052949Z",
+     "start_time": "2019-09-16T14:15:23.043800Z"
     }
    },
    "outputs": [],
@@ -259,8 +259,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.594174Z",
-     "start_time": "2019-09-12T09:26:07.571837Z"
+     "end_time": "2019-09-16T14:15:23.068662Z",
+     "start_time": "2019-09-16T14:15:23.055332Z"
     }
    },
    "outputs": [],
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We consider the first scenario in the paper.\n",
+    "We consider the first scenario, described in Subsection 8.3.1.\n",
     "There are $I = 10$ computers, each with $\\ell = 6$ tokens.\n",
     "The first half have a unit service capacity $\\mu$\n",
     "and the other half have a service capacity $4 \\mu$.\n",
@@ -308,8 +308,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:07.607982Z",
-     "start_time": "2019-09-12T09:26:07.597960Z"
+     "end_time": "2019-09-16T14:15:23.085362Z",
+     "start_time": "2019-09-16T14:15:23.072399Z"
     }
    },
    "outputs": [],
@@ -334,8 +334,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:08.033920Z",
-     "start_time": "2019-09-12T09:26:07.611040Z"
+     "end_time": "2019-09-16T14:15:23.464261Z",
+     "start_time": "2019-09-16T14:15:23.088235Z"
     }
    },
    "outputs": [],
@@ -350,8 +350,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:08.140059Z",
-     "start_time": "2019-09-12T09:26:08.035979Z"
+     "end_time": "2019-09-16T14:15:23.542075Z",
+     "start_time": "2019-09-16T14:15:23.466555Z"
     }
    },
    "outputs": [],
@@ -372,9 +372,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We consider the second scenario in the paper.\n",
+    "We consider the second scenario, described in Subsection 8.3.2.\n",
     "There are $I = 10$ servers, each with $\\ell = 6$ tokens.\n",
-    "All servers have the same unit service capacity $\\mu$.\n",
+    "All computer have the same unit capacity $\\mu$.\n",
     "There are two job types.\n",
     "The jobs of the first type arrive at a unit rate $\\nu$\n",
     "and can be assigned to any of the first seven servers.\n",
@@ -387,8 +387,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:08.148741Z",
-     "start_time": "2019-09-12T09:26:08.142115Z"
+     "end_time": "2019-09-16T14:15:23.550309Z",
+     "start_time": "2019-09-16T14:15:23.543727Z"
     }
    },
    "outputs": [],
@@ -412,8 +412,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:08.573974Z",
-     "start_time": "2019-09-12T09:26:08.152496Z"
+     "end_time": "2019-09-16T14:15:23.844991Z",
+     "start_time": "2019-09-16T14:15:23.552764Z"
     }
    },
    "outputs": [],
@@ -428,8 +428,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-12T09:26:08.687602Z",
-     "start_time": "2019-09-12T09:26:08.577153Z"
+     "end_time": "2019-09-16T14:15:23.945397Z",
+     "start_time": "2019-09-16T14:15:23.847662Z"
     }
    },
    "outputs": [],
